# ahmedakram-flyrank-ml-internship

./: README.md  main.py  pyproject.toml
notebooks/: 01_first_look_and_discovery.ipynb  02_your_first_readable_model.ipynb  03_working_with_the_full_release.ipynb
work/: README.md
work/notebooks/: capstone.ipynb  w01_research_question.ipynb  w02_ml_task_framing.ipynb  w03_data_contract.ipynb  w03_feature_leakage_check.ipynb  w04_baseline_score.ipynb  w04_signal_audit.ipynb  w05_model.ipynb  w06_validation_audit.ipynb  w07_action_playbook.ipynb
